--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
 		"@babel/core": "^7.6.2",
 		"@storybook/addon-actions": "^5.2.1",
 		"@storybook/addon-docs": "^5.3.0-alpha.3",
+		"@storybook/addon-knobs": "^5.2.1",
 		"@storybook/addon-links": "^5.2.1",
+		"@storybook/addon-notes": "^5.2.1",
 		"@storybook/addons": "^5.2.1",
 		"@storybook/vue": "^5.2.1",
 		"babel-loader": "^8.0.6",
