--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
 		"doc": "docs"
 	},
 	"dependencies": {
-		"vue": "^2.6.10"
+		"vue": "^2.6.10",
+		"vue-google-charts": "^0.3.2"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.6.2",
