--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"doc": "docs"
 	},
 	"dependencies": {
+		"@storybook/cli": "^5.2.5",
 		"vue": "^2.6.10",
 		"vue-google-charts": "^0.3.2"
 	},
